--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,5 +3,6 @@ $gray: #6F6F6F;
 $gray-light: #F9FBFE;
 $gray-light-2: #909090;
 $gray-light-3: #B6B6B6;
+$gray-light-4: #f1f1f1;
 $white: #ffffff;
 $black: #090814;
